--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -3,6 +3,10 @@
   <div mat-dialog-content class="content">
     <div class="row">
       <mat-form-field appearance="outline">
+        <mat-label>SKU</mat-label>
+        <input matInput type="text" formControlName="sku"/>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
         <mat-label>Name</mat-label>
         <input matInput type="text" formControlName="name"/>
       </mat-form-field>
@@ -10,6 +14,31 @@
         <mat-label>Price</mat-label>
         <input matInput type="number" formControlName="price"/>
       </mat-form-field>
+
+      <!-- <mat-form-field style="width: 100%;">
+        <mat-label>Upload Image</mat-label>
+        <button mat-icon-button matPrefix >
+          <mat-icon>upload</mat-icon>
+        </button>
+        <input type="file" readonly matInput formControlName="imagUrl" />
+        <input
+          type="file"
+          multiple
+          hidden
+          #f_input
+          (Change)="onChange($event)"
+        />
+      </mat-form-field> -->
+
+      <mat-form-field> 
+        <mat-label>Upload Image</mat-label>
+        <button mat-icon-button matPrefix >
+          <mat-icon>upload</mat-icon>
+        </button>
+        <input matInput readonly type="text" id="fileInput" (click)="hiddenInput.click()" formControlName="imgUrl"/>
+        <input hidden type="file" accept=".jpeg" #hiddenInput (change)="getFileOnLoad($event, data ? '': '')"/>
+     </mat-form-field>
+
     </div>
   </div>
   <div mat-dialog-actions class="action">
